feat: going dark

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -20,7 +20,7 @@
 
         .title {
             align-items: center;
-            color: hsl(0, 0%, 10%);
+            color: hsl(0, 0%, 90%);
             display: flex;
             font-size: 1em;
             font-weight: 500;
@@ -31,7 +31,7 @@
                 clip-rule: evenodd;
                 fill: none;
                 fill-rule: evenodd;
-                stroke: #1858f7;
+                stroke: #0071E3;
                 stroke-linecap: round;
                 stroke-linejoin: round;
                 stroke-width: 2.8px;
